P02 update deployurl and basehref

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.scss"],
-            "scripts": []
+            "scripts": [],
+            "deployUrl": "next-gen-tech/",
+            "baseHref": "next-gen-tech"
           },
           "configurations": {
             "production": {
