--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,7 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.scss"],
-            "scripts": [],
-            "deployUrl": "next-gen-tech/"
+            "scripts": []
           },
           "configurations": {
             "production": {
