--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "deploy": "ng deploy --base-href=https://alotuscoder.github.io/next-gen-tech/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
