--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href=https://alotuscoder.github.io/next-gen-tech/",
     "deploy": "ng deploy --base-href=https://alotuscoder.github.io/next-gen-tech/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
